--- a/control_server_gui/control_server_gui/angularjs/components/JointRadioList/view.html
+++ b/control_server_gui/control_server_gui/angularjs/components/JointRadioList/view.html
@@ -1,7 +1,7 @@
 ﻿<div>
-    <div class="radio" ng-repeat="joint in joint_radio_list.joint_settings_model.joint_settings">
+    <div class="radio" ng-repeat="joint in $ctrl.joint_settings_model.joint_settings">
         <label>
-            <input type="radio" name="radio-angle" ng-model="joint_radio_list.joint_settings_model.controlling" ng-value="$index">
+            <input type="radio" name="radio-angle" ng-model="$ctrl.joint_settings_model.controlling" ng-value="$index">
             {{("0" + ($index + 1).toString()).slice(-2)}}: {{joint.name}}
         </label>
     </div>
