Add motion install function

--- a/control_server_gui/control_server_gui/angularjs/components/LoadButton/view.html
+++ b/control_server_gui/control_server_gui/angularjs/components/LoadButton/view.html
@@ -1,4 +1,4 @@
-﻿<div class="form-group">
-    <label for="input-motion">Load Motion(s)</label>
+﻿<span class="btn btn-default btn-load" role="button">
+    Load Motion(s)
     <input type="file" accept=".json" multiple>
-</div>
+</span>
