--- a/control_server_gui/control_server_gui/angularjs/components/InstallButton/view.html
+++ b/control_server_gui/control_server_gui/angularjs/components/InstallButton/view.html
@@ -1,3 +1,1 @@
-﻿<div class="form-group">
-    <button class="btn btn-primary btn-block" type="button">Install</button>
-</div>
+﻿<a class="btn btn-success" role="button" ng-click="$ctrl.onClick()">Install{{ $ctrl.getStoredMotionsCount() }}</a>
