--- a/control_server_gui/control_server_gui/angularjs/components/ProgressBar/view.html
+++ b/control_server_gui/control_server_gui/angularjs/components/ProgressBar/view.html
@@ -1,7 +1,9 @@
 ﻿<div class="form-group">
-    <div class="progress">
-        <div class="progress-bar progress-bar-striped active" role="progressbar" ng-style='{ "width": "60%" }'>
-            <span class="sr-only">60% Complete</span>
+    <div class="progress class="col-xs-6">
+        <div class="progress-bar progress-bar-striped active" role="progressbar"
+             aria-valuemin="0" aria-valuemax="100"
+             ng-style='{ "width": $ctrl.getInstalledProgressPercent() }'
+        >
         </div>
     </div>
 </div>
