--- a/control_server_gui/control_server_gui/assets/css/index.css
+++ b/control_server_gui/control_server_gui/assets/css/index.css
@@ -2,6 +2,11 @@
     background: url('data:image/gif;base64,R0lGODlhDAAMAJEAAJ+7/f///////wAAACH5BAUUAAIALAAAAAAMAAwAAAIRlI+pa8Dnnpwg1hZRnvzt9RUAOw==') /*../img/bg.gif*/;
 }
 
+h2 {
+    font-size: 20px;
+    font-weight: bold;
+}
+
 .panel {
     background-color: rgba(255, 255, 255, 0.6);
 }
@@ -25,3 +30,17 @@
 .joint_button.is-selected .joint_button_bg {
     fill: #f0ad4e;
 }
+
+.btn-load {
+    position: relative;
+}
+
+    .btn-load input {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        cursor: pointer;
+    }
