Apply version checker

--- a/control_server_gui/control_server_gui/angularjs/components/ConnectButton/view.html
+++ b/control_server_gui/control_server_gui/angularjs/components/ConnectButton/view.html
@@ -1,6 +1,6 @@
 ﻿<div class="form-group">
     <div class="btn-group btn-group-justified" role="group">
         <a class="btn btn-default disabled" role="presentation">{{ $ctrl.getServerStatus(); }}</a> 
-        <a class="btn btn-success" role="button" ng-click="$ctrl.onClick()">Connect</a>
+        <a class="btn btn-primary" role="button" ng-click="$ctrl.onClick()">Connect</a>
     </div>
 </div>
