--- a/control_server_gui/control_server_gui/angularjs/components/SetterButtons/view.html
+++ b/control_server_gui/control_server_gui/angularjs/components/SetterButtons/view.html
@@ -1,6 +1,6 @@
 ﻿<div class="form-group">
     <div class="btn-group btn-group-justified" role="group">
         <a class="btn btn-default" role="button" ng-click="$ctrl.onClickHome()">Home</a>
-        <a class="btn btn-primary" role="button" ng-click="$ctrl.onClickReset()">Reset</a>
+        <a class="btn btn-warning" role="button" ng-click="$ctrl.onClickReset()">Reset All</a>
     </div>
 </div>
